--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE htm> 
   <html lang="en">
     <head> 
-      meta charset="UTF-8">
+      <meta charset="UTF-8">
       <title>In Plain Sight</title>
       <style>
         body {
@@ -19,10 +19,45 @@
           width: 1280px;
           height: 720px;
           background: black;
-          position: relative
+          position: relative;
+          overflow: hidden;
+          border: 10px solid black;
+          box-sizing: content-box
+        }
+
+        #scene-img, #sprite-kuzuru, #sprite-yume, #opening gif, #background {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          z-index: 0;
         }
 
 
+        #sprite-kuzuru, #sprite-yume {
+          bottom: 0;
+          display: none;
+          z-index: 1;
+        }
+
+        #dialogue-box {
+          position: absolute;
+          bottom: 0;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 90%;
+          padding: 20px;
+          background: rgba(0,0,0,0.85);
+          border-top: 3px solid white;
+          color: white;
+          font-size: 18px;
+          line-height: 1.5;
+          display: none;
+          z-index
+
+        }
 
 
 
@@ -31,5 +66,4 @@
 
       </style>
     </head>
-  </html>
-</DOCTYPE>
+ 
