--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           box-sizing: content-box
         }
 
-        #scene-img, #sprite-kuzuru, #sprite-yume, #opening gif, #background {
+        #scene-img, #sprite-kuzuru, #sprite-yume, #opening-gif, #background {
           position: absolute;
           top: 0;
           left: 0;
@@ -55,12 +55,49 @@
           font-size: 18px;
           line-height: 1.5;
           display: none;
-          z-index
+          z-index: 2;
+        }
+
+        #choices {
+          margin-top: 15px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+        }
+
+        .choice-btn {
+          background: black;
+          color: white;
+          border: 2px solid white;
+          padding: 10px;
+          cursor: pointer;
+          font-size: 16px;
+          transition: all 0.2s ease;
 
         }
 
+        .choice-btn:hover {
+          background:white;
+          color:black;
+        }
+        
+        
+        #play-button {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background: black;
+          color: white;
+          font-size: 28px;
+          padding: 15px 50px;
+          border: 3px solid white;
+          cursor: pointer;
+          display: none;
+          z-index: 3;
+        }
 
-
+      #play-button
 
 
 
