working on entry gif

--- a/index.html
+++ b/index.html
@@ -97,10 +97,25 @@
           z-index: 3;
         }
 
-      #play-button
-
-
-
+      #play-button:hover { background:white; color:black; }
       </style>
-    </head>
+      </head>
+      <body>
+        <div id="game container">
+          <img id="opening gif" src="for vn.gif">
+          <img id="scene-img" src="">
+          <img id="background" src="for vn.gif">
+          <img id="sprite-kuzuru" src="for vn.gif">
+          <img id="sprite-yume" src="for vn.gif">
+          <img id="dialogue-box" src="for vn.gif">
+          <img id="dialogue-text" src="for vn.gif">
+         <p id="choices"></div>
+         </div>
+         <button id = "play-button">play</button>
+        </div>
+        <script>
+
+          const openingGif = document.getElementbyId("opening-gif");
+          
  
+        
