--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE htm> 
+<DOCTYPE html> 
   <html lang="en">
     <head> 
       <meta charset="UTF-8">
@@ -101,8 +101,8 @@
       </style>
       </head>
       <body>
-        <div id="game container">
-          <img id="opening gif" src="for vn.gif">
+        <div id="game-container">
+          <img id="opening-gif" src="for vn.gif">
           <img id="scene-img" src="">
           <img id="background" src="for vn.gif">
           <img id="sprite-kuzuru" src="for vn.gif">
@@ -115,15 +115,15 @@
         </div>
         <script>
 
-          const openingGif = document.getElementbyId("opening-gif");
+          const openingGif = document.getElementById("opening-gif");
           const playButton = document.getElementById("play-button");
-          const dialogueBox = document.getElementbyId("dialogue-box");
-          const dialogueText = document.getElementbyId("dialogue-text");
-          const choicesDiv = document.getElementbyId("choices");
-          const sceneImg = document.getElementbyId("scene-img");
-          const spriteKuzuru = document.getElementbyId("sprite-kuzuru");
-          const spriteYume = document.getElementbyId("sprite-yume");
-          const background = document.getElementbyId("background");
+          const dialogueBox = document.getElementById("dialogue-box");
+          const dialogueText = document.getElementById("dialogue-text");
+          const choicesDiv = document.getElementById("choices");
+          const sceneImg = document.getElementById("scene-img");
+          const spriteKuzuru = document.getElementById("sprite-kuzuru");
+          const spriteYume = document.getElementById("sprite-yume");
+          const background = document.getElementById("background");
 
           openingGif.addEventListener("load", () => {
             setTimeout(()  => {
@@ -184,7 +184,7 @@
                   spriteYume.src="";
                 } else {
                   spriteYume.style.display="block";
-                  spriteYume.src = line.kuzuru;
+                  spriteYume.src = line.Yume;
                 }
               } else { 
                 spriteYume.style.display="none";
@@ -233,11 +233,139 @@
             {text: "Kuzuru glares at you. No response, his eyes are just... dark.", kuzuru: "kuzuru intimidate.png", yume:"yume concerned.png"},
             {text: "<strong>Kuzuru</strong>: ...You should get some more sleep.", kuzuru: "deadpan.png", yume: "neutral.png"},
             {text: "<strong>Kuzuru</strong>: Otherwise you'll look more ghoulish than you already are.", kuzuru: "deadpan.png", yume: "stares.png"},
-            {text: "<strong>Kuzuru</strong>: Otherwise you'll look more ghoulish than you already are.", kuzuru: "deadpan.png", yume: "stares.png"},
+            {text: "Yume: At least he GOT some sleep, Yume says with a snicker", kuzuru: "neutral2.png", yume: "teases.png"},
+            {text: "Kuzuru replies with a chuckle, only reserved for Yume", kuzuru: "chuckles.png", yume: "yume laughs.png"},
+            {text: "You feel a pang of jealousy, but brush it off. Yume never laughed at your jokes.", scene: "angry you.png"},
+            {text: "Honestly, you feel like a third wheel sometimes. Most of the time.", scene: "angry you.png"},
+            {text: "You: Whatever, *you mumur underneath your breath,* let's just go to class.", scene: "angry you2.png"},
+        ];
 
-
-
-          ]
+        currentLine=0;
+        dialogueText.innerHTML = dialogyeLines[currentLine].text;
+        sceneCallback=startClassTime;
+        dialogueBox.oneclick = advanceDialogue;
         }
-          
+
+        // class time
+        function startClassTime(){
+          spriteKuzuru.style.display="none";
+          spriteYume.style.display="none";
+          spriteKuzuru.src="";
+          spriteYume.src="";
+          sceneImg.src="classroom.png";
+          background.style.display="none";
+          background.src="";
+
+         dialogueLines=[
+         {text:"You: *Yawn*... seems like pulling an all-nighter did numbers on me. I can't even concentrate...", background: "black.png"},
+         {text:"As you lift your head, rubbing your drowsy eyes, from your peripheral vision...", scene: "desk.png", kuzuru: ""},
+         {text:"Kuzuru is... staring at You...? Or Yume.. you can't tell With that dark, unreadable expression.", kuzuru: "kuzuru stares.png"},
+         {text:"That was... odd. Did he seriously just... n-no, you must be seeing things.", kuzuru: "kuzuru looks away.png"},
+         {text:"You: Yume, *you whisper to her*.", background: "black.png"},
+         {text:"Yume: Hm? Need something? *she says, without looking up at you.*", yume:"yume speaking.png"},
+         {text:"You: Are you and Kuzuru... a thing?", yume:"yume smile.png"},
+         {text:"Yume: !", yume:"shocked yume.png"},
+         {text:"Yume: Haha, well, I guess you could say that.", yume:"smiling yume.png"},
+         {text:"Honestly, you didn't know how to feel. It didn't feel much like a surprise. You were honestly expecting it.", yume:"yume smile.png"},
+         {text:"But it hurt. A lot. You felt like your heart was being squeezed. You've been growing distant to Yume.", background: "black.png"},
+         {text:"You: ...Congrats, *you murmur quietly. you almost felt a tear escape your eye, but you quickly blink it away.*", yume: "yume smile.png"},
+         {text:"You clenched your fist. Something else was stirring. Anger. How could he do this to you?", background: "black.png"}
+        ];
+
+       currentLine=0;
+       dialogueText.innerHTML = dialogueLines[currentLine].text;
+       sceneCallback=afterClassTransition;
+       dialogueBox.onclick = advanceDialogue;
+       }
+
+      function afterClassTransition(){
+      spriteKuzuru.style.display="none";
+      spriteYume.style.display="none";
+      spriteKuzuru.src="";
+      spriteYume.src="";
+      sceneImg.src="";
+      background.style.display="none";
+      background.src="";
+
+     dialogueLines=[ {text:"After class."} ];
+     currentLine=0;
+     dialogueText.innerHTML = dialogueLines[currentLine].text;
+     sceneCallback=startOutsideClasses;
+     dialogueBox.onclick=advanceDialogue
+     }
+
+// outside classes
+function startOutsideClasses(){
+  spriteKuzuru.style.display="block";
+  spriteYume.style.display="none";
+  spriteKuzuru.src="";
+  spriteYume.src="";
+  sceneImg.src="after hours.png";
+  background.style.display="none";
+  background.src="";
+
+  dialogueLines=[
+    {text:"You couldn't take it anymore. You had to confront him about this relationship of theirs.", background: "black.png"},
+    {text:"You: Kuzuru! Hey!", kuzuru:""},
+    {text:"Kuzuru stops almost immediately... towering over you.", kuzuru:"kuzuru neutral2.png"},
+    {text:"<strong>Kuzuru</strong>: ...What is it? *he says, his voice curt as ever.*", kuzuru:"kuzuru deadpan.png"},
+    {text:"You: Look, I want to know about you and Yume. Are you two seriously... dating or something?", kuzuru:"kuzuru neutral2.png"},
+    {text:"<strong>Kuzuru</strong>: Why do you care exactly? That is none of your concern.", kuzuru:"kuzuru speak.png"},
+    {text:"<strong>Kuzuru</strong>: Do you have a crush on her or something?", kuzuru:"kuzuru smiles.png"},
+    {text:"You: W-what? No! I just... well, I don't know. You're my friend... both of you are my friends, so why didn't you tell me?", kuzuru:"kuzuru smiles4.png"},
+    {text:"<strong>Kuzuru</strong>: Hmph. You really are dense, aren't you?", kuzuru:"kuzuru surprised.png"},
+    {text:"He said that so... quietly, almost like an incredulous whisper. You felt your face burn with humiliation and anger.", background: "black.png"},
+    {text:"<strong>Kuzuru</strong>: Fine. If you want to know so badly, meet me after school. Alone.", kuzuru:"kuzuru smiles.png"},
+    {text:"And so you did. You had no reason to distrust him, though you've never been at his house before.", background: "black.png"},
+    {text:"Things should've been fine. They should've been normal. But they weren't. They never were.", background: "black.png"}
+  ];
+
+  currentLine=0;
+  dialogueText.innerHTML = dialogueLines[currentLine].text;
+  sceneCallback=startBasement;
+  dialogueBox.onclick = advanceDialogue;
+}
+
+// basement
+function startBasement(){
+  spriteKuzuru.style.display="block";
+  spriteYume.style.display="none";
+  spriteKuzuru.src="";
+  spriteYume.src="";
+  sceneImg.src="his house.png";
+  background.style.display="none";
+  background.src="";
+
+  dialogueLines=[
+    {text:"You couldn't even register the air growing cold as he shuts the heavy door behind you, before he gripped your wrist tightly.", background: "black.png"},
+    {text:"You: Kuzuru? What the..?", kuzuru: "..."},
+    {text:"<strong>Kuzuru</strong>: Shh. Just be quiet.", kuzuru:"kuzuru dead.png"},
+    {text:"His hand brushes your face.", background: "holding.png"},
+    {text:"Then everything turned black.", background: "black.png"},
+    {text:"You wake up in a dimly lit basement, air thick with neglect and mold. But, before the scent even reached your nose, you saw him.", kuzuru:"", background: "black.png"},
+    {text:"There he was. RIGHT IN FRONT OF YOU. Crouched, smiling at you as his soulless eyes that were once dark, were now pale.", kuzuru:"kidnap smile.png"},
+    {text:"<strong>Kuzuru</strong>: You're finally awake. That's good. Longer, and I would've thought you were dead.", kuzuru:"kidnap smile2.png"},
+    {text:"You: What the... what is going on? What are you DOING?", kuzuru:"kidnap smile.png"},
+    {text:"<strong>Kuzuru</strong>: Quiet. Don't be scared. I'm not going to hurt you. On the contrary, I'm going to take good care of you.", kuzuru:"kidnap happy.png"},
+    {text:"<strong>Kuzuru</strong>: You see, I've always been watching you. Ever since you transferred here.", kuzuru:"kidnap smile.png"},
+    {text:"You: But w-what? What about Yume? I thought you liked her?", kuzuru:"kidnap deadpan.png"},
+    {text:"<strong>Kuzuru</strong>: She was a means to an end. I never liked anyone. Until I met you.", kuzuru:"kidnap speak.png"},
+    {text:"Your heart is racing. You realize you are completely at his mercy.", background: "black.png", kuzuru: ""}
+  ];
+
+  currentLine=0;
+  dialogueText.innerHTML = dialogueLines[currentLine].text;
+  sceneCallback=null;
+  dialogueBox.onclick=advanceDialogue;
+}
+</script>
+</body>
+</html>
+
+
+
+
+
+
+
         
