--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ function startClassTime(){
 
   dialogueLines=[
     {text:"You: *Yawn*... seems like pulling an all-nighter did numbers on me. I can't even concentrate...", background: "black.png"},
-    {text:"As you lift your head, rubbing your drowsy eyes, from your peripheral vision...", scene: "desk.png", kuzuru: ""},
+    {text:"As you lift your head, rubbing your drowsy eyes, from your peripheral vision...", scene: "desk.png", kuzuru: "..."},
     {text:"Kuzuru is... staring at Yume... or you? You couldn't tell with that dark, unreadable expression.", kuzuru: "kuzuru_stares.png"},
     {text:"That was... odd. Did he seriously just... n-no, you must be seeing things.", kuzuru: "kuzuru_looks_away.png"},
     {text:"You: Yume, *you whisper to her*.", background: "black.png"},
@@ -302,7 +302,7 @@ function startOutsideClasses(){
 
   dialogueLines=[
     {text:"You couldn't take it anymore. You had to confront him about this relationship of theirs.", background: "black.png"},
-    {text:"You: Kuzuru! Hey!", kuzuru:""},
+    {text:"You: Kuzuru! Hey!", kuzuru:"..."},
     {text:"Kuzuru stops almost immediately... towering over you.", kuzuru:"kuzuru_neutral2.png"},
     {text:"<strong>Kuzuru</strong>: ...What is it? *he says, his voice curt as ever.*", kuzuru:"kuzuru_deadpan.png"},
     {text:"You: Look, I want to know about you and Yume. Are you two seriously... dating or something?", kuzuru:"kuzuru_neutral2.png"},
@@ -335,7 +335,7 @@ function startBasement(){
   dialogueLines=[
     {text:"You couldn't even register the air growing cold as he shuts the heavy door behind you, before he gripped your wrist tightly.", background: "black.png"},
     {text:"You: Kuzuru? What are you...?", kuzuru: "..."},
-    {text:"<strong>Kuzuru</strong>: Sh. Just be quiet.", kuzuru:"kuzuru_dead.png"},
+    {text:"<strong>Kuzuru</strong>: Sh. Just be quiet.", kuzuru:"kuzuru_deadpan.png"},
     {text:"!", kuzuru:"kuzuru_grabs.png"},
     {text:"His hand brushes your face.", background: "holding.png"},
     {text:"Then everything turned black.", background: "black.png"},
